fixed the user goals form alignment

--- a/style.css
+++ b/style.css
@@ -77,11 +77,17 @@ body.light-mode .topnav a:hover {
     color: #1c1c1c;
 }
 
+body.light-mode #light-toggle {
+  background-color: #f4f4f4;
+  border-radius: #a6a6a6;
+}
+
 /* Toggle Button */
 #light-toggle {
     padding: 2px;
     border-radius: 12px;
-    border-color:#f4f4f4
+    border-color:#a6e3e9;
+    background-color: #0e1018;
 }
 
 /* Page Visibility */
@@ -238,13 +244,15 @@ tr:nth-child(even) {
 .badge img {
   width: 80px;
   height: auto;
+  pointer-events: visible;
 }
 
 .badge.locked img {
   opacity: 0.4;
   filter: grayscale(100%) blur(1px);
-  pointer-events: none; /* makes it non-interactive */
+  pointer-events: none; 
 }
+
 
 /* Settings Page styling */
 
@@ -252,7 +260,9 @@ tr:nth-child(even) {
     /* max-width: 400px; */
     max-width: 90%;
     margin: 2rem auto;
-    padding: 2rem;
+    padding: 2rem; 
+    margin-left: 40px;
+    margin-right: 40px;
     background-color: #0e1018;
     border-radius: 1rem;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
